# archmate

./: LICENSE  README.md
archiso/: PKGBUILD  Readme.md  archiso.md  archiso_mate.sh  custompkg.sh  newpkg.md  newpkgs.md  pacstrap_modify  pkg-mate-x86_64.txt  qemutest.sh  readme.md  sf_readme.md
archiso/cli/: archiso_cli.sh  pkg-cli-minimal-x86_64.txt  pkg-cli-x86_64.txt
archiso/install_live/: install_readme.md
archiso/lxde/: archiso_lxde.sh  pkg-lxde-x86_64.txt
archiso/mate/: archiso_mate.sh  pkg-mate-x86_64.txt
archiso/minimal/: archiso_min.sh  pkg-minimal-x86_64.txt
archiso/openbox/: archiso_openbox.sh  pkg-openbox-x86_64.txt
archiso/x86_64/: custompkg.sh  pacconf.sh  qemu_test.sh
embedded/raspberrypi/: install.md  install_armv6h.md  install_armv7h.md  install_pizero.md  pkg_basic.txt  vdisk.md
lists/: archiso.md  archived.md  base.md  cad.md  campus.md  college.md  design.md  driver.md  electronic.md  media.md  multimedia.md  networking.md  other.md  programming.md  qt.md  virtual.md  winlayer.md
notes/: general.md  git.md  makepkg.md  matlab.md  pacman.md  winapp.md
notes/templates/: README.md
notes/templates/desktop/c_call/cpp-in-c/: CMakeLists.txt  build.md  main.c  pwr.cpp  pwr.h  pwr_wrap.cpp  pwr_wrap.h  readme.md
notes/templates/desktop/gui/fltk-c++/: CMakeLists.txt  Makefile  gui.cpp  gui.h  main.cpp  readme.md
notes/templates/desktop/wxform/wxform-c++/: CMakeLists.txt  Makefile  Ui_appGui.cpp  gui.cpp  readme.md
pkgbuilds/archmate-font/: pkg.install
qemu/: build.md  qemu.md  x86_basic.md  x86_usb.md
(+538 files in other folders)
